--- a/CarRental.Business.Managers/CarRental.Business.Managers.csproj
+++ b/CarRental.Business.Managers/CarRental.Business.Managers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1D807985-CF50-477F-B246-0D82526B1B54}</ProjectGuid>
+    <ProjectGuid>{1935EE5D-9E58-4A45-8051-733C08B28C40}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CarRental.Business.Bootstrapper</RootNamespace>
-    <AssemblyName>CarRental.Business.Bootstrapper</AssemblyName>
+    <RootNamespace>CarRental.Business.Managers</RootNamespace>
+    <AssemblyName>CarRental.Business.Managers</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,19 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.ServiceModel.Discovery" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,8 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MEFLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Managers\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CarRental.Business.Common\CarRental.Business.Common.csproj">
@@ -66,17 +57,9 @@
       <Project>{02fe66be-7d08-4830-ad62-042f00012085}</Project>
       <Name>CarRental.Business.Entities</Name>
     </ProjectReference>
-    <ProjectReference Include="..\CarRental.Business.Managers\CarRental.Business.Managers.csproj">
-      <Project>{1935ee5d-9e58-4a45-8051-733c08b28c40}</Project>
-      <Name>CarRental.Business.Managers</Name>
-    </ProjectReference>
     <ProjectReference Include="..\CarRental.Business\CarRental.Business.csproj">
       <Project>{a2ba0191-2307-4a0d-b294-0bc928bb6769}</Project>
       <Name>CarRental.Business</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CarRental.Common.Contracts\CarRental.Common.Contracts.csproj">
-      <Project>{e8a254cb-d685-40df-9bcc-9152800db12d}</Project>
-      <Name>CarRental.Common.Contracts</Name>
     </ProjectReference>
     <ProjectReference Include="..\CarRental.Common\CarRental.Common.csproj">
       <Project>{37ab8c94-7800-41a6-a176-45e48308a507}</Project>
@@ -102,10 +85,6 @@
       <Project>{493cd021-bc92-462b-b42d-72d524b210e0}</Project>
       <Name>Core.Common</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
