--- a/CarRental.Business.Managers.Tests/CarRental.Business.Managers.Tests.csproj
+++ b/CarRental.Business.Managers.Tests/CarRental.Business.Managers.Tests.csproj
@@ -55,6 +55,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="InventoryManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
