--- a/CarRental.ServiceHost.Console/CarRental.ServiceHost.Console.csproj
+++ b/CarRental.ServiceHost.Console/CarRental.ServiceHost.Console.csproj
@@ -36,8 +36,10 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Discovery" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
