--- a/CarRental.Web/Web.config
+++ b/CarRental.Web/Web.config
@@ -12,7 +12,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="main" connectionString="Data Source=.;Initial Catalog=CarRental;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="main" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=D:\GitHub\CarRental\CarRental.Web\App_Data\CarRental.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
